--- a/Homework 2/assignment2.ipynb
+++ b/Homework 2/assignment2.ipynb
@@ -434,8 +434,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def optimal_thresholds(linear_threshold: np.ndarray, linear_reg_fpr: np.ndarray, linear_reg_tpr: np.ndarray, log_threshold: np.ndarray, log_reg_fpr: np.ndarray, log_reg_tpr: np.ndarray) -> Tuple[float, float]:\n",
     "    '''\n",
     "        return the tuple consisting the thresholds of Linear Regression and Logistic Regression Models respectively\n",
@@ -453,7 +451,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "def stratified_k_fold_cross_validation(num_of_folds: int, shuffle: True, features: pd.DataFrame, label: pd.Series):\n",
     "    '''\n",
     "        split the data into 5 groups. Checkout StratifiedKFold in scikit-learn\n",
@@ -469,8 +466,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def train_test_folds(skf, num_of_folds: int, features: pd.DataFrame, label: pd.Series) -> Tuple[np.ndarray, np.ndarray, np.ndarray, dict]:\n",
     "    '''\n",
     "        train and test in for loop with different training and test sets obatined from skf. \n",
@@ -509,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "c58c780f",
    "metadata": {},
    "outputs": [
@@ -540,7 +535,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 81\u001b[0m\n\u001b[1;32m     76\u001b[0m plt\u001b[39m.\u001b[39mshow()\n\u001b[1;32m     78\u001b[0m linear_optimal_threshold, log_optimal_threshold \u001b[39m=\u001b[39m optimal_thresholds(\n\u001b[1;32m     79\u001b[0m     linear_threshold, linear_reg_fpr, linear_reg_tpr, log_threshold, log_reg_fpr, log_reg_tpr)\n\u001b[0;32m---> 81\u001b[0m skf \u001b[39m=\u001b[39m stratified_k_fold_cross_validation(\n\u001b[1;32m     82\u001b[0m     num_of_folds, final_features, final_label)\n\u001b[1;32m     83\u001b[0m features_count, auc_log, auc_linear, f1_dict \u001b[39m=\u001b[39m train_test_folds(\n\u001b[1;32m     84\u001b[0m     skf, num_of_folds, final_features, final_label)\n\u001b[1;32m     86\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mDoes features change in each fold?\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[20], line 81\u001b[0m\n\u001b[1;32m     76\u001b[0m plt\u001b[39m.\u001b[39mshow()\n\u001b[1;32m     78\u001b[0m linear_optimal_threshold, log_optimal_threshold \u001b[39m=\u001b[39m optimal_thresholds(\n\u001b[1;32m     79\u001b[0m     linear_threshold, linear_reg_fpr, linear_reg_tpr, log_threshold, log_reg_fpr, log_reg_tpr)\n\u001b[0;32m---> 81\u001b[0m skf \u001b[39m=\u001b[39m stratified_k_fold_cross_validation(\n\u001b[1;32m     82\u001b[0m     num_of_folds, final_features, final_label)\n\u001b[1;32m     83\u001b[0m features_count, auc_log, auc_linear, f1_dict \u001b[39m=\u001b[39m train_test_folds(\n\u001b[1;32m     84\u001b[0m     skf, num_of_folds, final_features, final_label)\n\u001b[1;32m     86\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mDoes features change in each fold?\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "\u001b[0;31mTypeError\u001b[0m: stratified_k_fold_cross_validation() missing 1 required positional argument: 'label'"
      ]
     }
@@ -657,6 +652,49 @@
     "        f1_dict['linear_reg'])\n",
     "    f1_log_mean, f1_log_open_interval, f1_log_close_interval = assignment2.mean_confidence_interval(\n",
     "        f1_dict['log_reg'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f88f9ccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.95467986,  0.95467986,  0.75203158,  0.14189673,  0.11195391,\n",
+       "        0.09690581,  0.09179067, -0.00375475, -0.00797154, -0.18302528])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linear_reg_area_under_curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "249c9d98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9560117302052785"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linear_optimal_threshold"
    ]
   }
  ],
