--- a/Homework 3/assignmnet3.ipynb
+++ b/Homework 3/assignmnet3.ipynb
@@ -2,28 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "979a697c",
+   "execution_count": null,
+   "id": "08db0543",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from typing import Tuple, List, Optional, Any, Callable, Dict, Union\n",
-    "from sklearn.metrics import roc_curve, roc_auc_score\n",
-    "from sklearn.linear_model import Ridge, Lasso\n",
-    "from sklearn.metrics import roc_auc_score\n",
+    "from typeguard import typechecked\n",
     "import random\n",
-    "from typeguard import typechecked"
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.linear_model import Ridge, Lasso\n",
+    "from sklearn.metrics import roc_curve, roc_auc_score\n",
+    "from typing import Tuple, List, Optional, Any, Callable, Dict, Union\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fcd64af5",
+   "execution_count": null,
+   "id": "564ad576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fe623708",
+   "execution_count": null,
+   "id": "c538a67b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def read_data(filename: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -50,11 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a9ddeac1",
+   "execution_count": null,
+   "id": "741f0e82",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def data_preprocess(df: pd.DataFrame) -> Tuple[pd.DataFrame, pd.Series]:\n",
     "    \"\"\"\n",
@@ -63,7 +67,8 @@
     "    You may use the same code you submiited for problem 2 of HW2\n",
     "    \"\"\"\n",
     "    df_numerical: pd.DataFrame = df.select_dtypes(include=['int64', 'float64'])\n",
-    "    df_categorical: pd.DataFrame = df.select_dtypes(exclude=['int64', 'float64'])\n",
+    "    df_categorical: pd.DataFrame = df.select_dtypes(\n",
+    "        exclude=['int64', 'float64'])\n",
     "    df_categorical = pd.get_dummies(df_categorical)\n",
     "\n",
     "    return pd.concat([df_categorical, df_numerical], axis=1), pd.Series(df['NewLeague'])"
@@ -71,11 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9330300d",
+   "execution_count": null,
+   "id": "c8485d01",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def data_split(\n",
     "    features: pd.DataFrame, label: pd.Series, test_size: float\n",
@@ -84,17 +91,20 @@
     "    Split 80% of data as a training set and the remaining 20% of the data as testing set\n",
     "    return training and testing sets in the following order: X_train, X_test, y_train, y_test\n",
     "    \"\"\"\n",
-    "    x_train, x_test, y_train, y_test = train_test_split(features, label, test_size=test_size)\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(\n",
+    "        features, label, test_size=test_size)\n",
     "    return x_train, x_test, y_train, y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5d8cb4b1",
+   "execution_count": null,
+   "id": "1f7a7832",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def train_ridge_regression(\n",
     "    x_train: pd.DataFrame,\n",
@@ -134,11 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cadb83ec",
+   "execution_count": null,
+   "id": "5d3b6b02",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def train_lasso(\n",
     "    x_train: pd.DataFrame,\n",
@@ -176,11 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "507a0cbc",
+   "execution_count": null,
+   "id": "f3fb35e3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def ridge_coefficients(\n",
     "    x_train: pd.DataFrame,\n",
@@ -199,11 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8d331448",
+   "execution_count": null,
+   "id": "b0771a74",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def lasso_coefficients(\n",
     "    x_train: pd.DataFrame,\n",
@@ -222,11 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6cf65b3e",
+   "execution_count": null,
+   "id": "d2944459",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def ridge_area_under_curve(\n",
     "    model_R, x_test: pd.DataFrame, y_test: pd.Series\n",
@@ -237,7 +255,7 @@
     "    Finally plot the ROC Curve using false_positive_rate, true_positive_rate as x and y axes calculated from roc_curve\n",
     "    \"\"\"\n",
     "    y_prob = model_R.predict_proba(x_test)[:, 1]\n",
-    "    \n",
+    "\n",
     "    fpr, tpr, thresholds = roc_curve(y_test, y_prob)\n",
     "    roc_auc = roc_auc_score(y_test, y_prob)\n",
     "    plt.plot(fpr, tpr, label='ROC curve (area = %0.2f)' % roc_auc)\n",
@@ -249,17 +267,19 @@
     "    plt.title('Receiver operating characteristic')\n",
     "    plt.legend(loc=\"lower right\")\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "    return roc_auc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "2042f2d3",
+   "execution_count": null,
+   "id": "5dae2170",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def lasso_area_under_curve(\n",
     "    model_L, x_test: pd.DataFrame, y_test: pd.Series\n",
@@ -277,11 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5907946f",
+   "execution_count": null,
+   "id": "4c91a68f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "class Node:\n",
     "    @typechecked\n",
     "    def __init__(\n",
@@ -306,11 +328,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7b67ef2c",
+   "execution_count": null,
+   "id": "d628af13",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "class TreeRegressor:\n",
     "    @typechecked\n",
     "    def __init__(self, data: np.ndarray, max_depth: int) -> None:\n",
@@ -384,11 +408,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "b378a709",
+   "execution_count": null,
+   "id": "b50f5a1a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def compare_node_with_threshold(node: Node, row: np.ndarray) -> bool:\n",
     "    \"\"\"\n",
@@ -403,11 +429,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "d1a4872f",
+   "execution_count": null,
+   "id": "2c3eaab9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "@typechecked\n",
     "def predict(\n",
     "    node: Node, row: np.ndarray, comparator: Callable[[Node, np.ndarray], bool]\n",
@@ -420,11 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "371c26d1",
+   "execution_count": null,
+   "id": "4cf14370",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "class TreeClassifier(TreeRegressor):\n",
     "    def build_tree(self):\n",
     "        # Note: You can remove this if you want to use build tree from Tree Regressor\n",
@@ -463,28 +493,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "af5cfab8",
+   "execution_count": null,
+   "id": "40cc7778",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'A'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 11\u001b[0m\n\u001b[1;32m      7\u001b[0m final_features, final_label \u001b[39m=\u001b[39m data_preprocess(df)\n\u001b[1;32m      8\u001b[0m x_train, x_test, y_train, y_test \u001b[39m=\u001b[39m data_split(\n\u001b[1;32m      9\u001b[0m     final_features, final_label, \u001b[39m0.2\u001b[39m\n\u001b[1;32m     10\u001b[0m )\n\u001b[0;32m---> 11\u001b[0m ridge_mean_acu \u001b[39m=\u001b[39m train_ridge_regression(x_train, y_train, x_test, y_test)\n\u001b[1;32m     12\u001b[0m lasso_mean_acu \u001b[39m=\u001b[39m train_lasso(x_train, y_train, x_test, y_test)\n\u001b[1;32m     13\u001b[0m model_R, ridge_coeff \u001b[39m=\u001b[39m ridge_coefficients(x_train, y_train, \u001b[39m10\u001b[39m)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/typeguard/__init__.py:1033\u001b[0m, in \u001b[0;36mtypechecked.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   1031\u001b[0m memo \u001b[39m=\u001b[39m _CallMemo(python_func, _localns, args\u001b[39m=\u001b[39margs, kwargs\u001b[39m=\u001b[39mkwargs)\n\u001b[1;32m   1032\u001b[0m check_argument_types(memo)\n\u001b[0;32m-> 1033\u001b[0m retval \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1034\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1035\u001b[0m     check_return_type(retval, memo)\n",
-      "Cell \u001b[0;32mIn[6], line 23\u001b[0m, in \u001b[0;36mtrain_ridge_regression\u001b[0;34m(x_train, y_train, x_test, y_test, max_iter)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[39mfor\u001b[39;00m lambda_val \u001b[39min\u001b[39;00m lambda_vals:\n\u001b[1;32m     22\u001b[0m     ridge \u001b[39m=\u001b[39m Ridge(alpha\u001b[39m=\u001b[39mlambda_val, max_iter\u001b[39m=\u001b[39mmax_iter)\n\u001b[0;32m---> 23\u001b[0m     ridge\u001b[39m.\u001b[39;49mfit(x_train, y_train)\n\u001b[1;32m     24\u001b[0m     y_pred \u001b[39m=\u001b[39m ridge\u001b[39m.\u001b[39mpredict(x_test)\n\u001b[1;32m     25\u001b[0m     auc \u001b[39m=\u001b[39m roc_auc_score(y_test, y_pred)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/linear_model/_ridge.py:1126\u001b[0m, in \u001b[0;36mRidge.fit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m   1123\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_params()\n\u001b[1;32m   1125\u001b[0m _accept_sparse \u001b[39m=\u001b[39m _get_valid_accept_sparse(sparse\u001b[39m.\u001b[39missparse(X), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msolver)\n\u001b[0;32m-> 1126\u001b[0m X, y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(\n\u001b[1;32m   1127\u001b[0m     X,\n\u001b[1;32m   1128\u001b[0m     y,\n\u001b[1;32m   1129\u001b[0m     accept_sparse\u001b[39m=\u001b[39;49m_accept_sparse,\n\u001b[1;32m   1130\u001b[0m     dtype\u001b[39m=\u001b[39;49m[np\u001b[39m.\u001b[39;49mfloat64, np\u001b[39m.\u001b[39;49mfloat32],\n\u001b[1;32m   1131\u001b[0m     multi_output\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m   1132\u001b[0m     y_numeric\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m   1133\u001b[0m )\n\u001b[1;32m   1134\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mfit(X, y, sample_weight\u001b[39m=\u001b[39msample_weight)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/base.py:565\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    563\u001b[0m         y \u001b[39m=\u001b[39m check_array(y, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_y_params)\n\u001b[1;32m    564\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 565\u001b[0m         X, y \u001b[39m=\u001b[39m check_X_y(X, y, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mcheck_params)\n\u001b[1;32m    566\u001b[0m     out \u001b[39m=\u001b[39m X, y\n\u001b[1;32m    568\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m check_params\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mensure_2d\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mTrue\u001b[39;00m):\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/utils/validation.py:1122\u001b[0m, in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001b[0m\n\u001b[1;32m   1102\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1103\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mestimator_name\u001b[39m}\u001b[39;00m\u001b[39m requires y to be passed, but the target y is None\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1104\u001b[0m     )\n\u001b[1;32m   1106\u001b[0m X \u001b[39m=\u001b[39m check_array(\n\u001b[1;32m   1107\u001b[0m     X,\n\u001b[1;32m   1108\u001b[0m     accept_sparse\u001b[39m=\u001b[39maccept_sparse,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1119\u001b[0m     input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mX\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   1120\u001b[0m )\n\u001b[0;32m-> 1122\u001b[0m y \u001b[39m=\u001b[39m _check_y(y, multi_output\u001b[39m=\u001b[39;49mmulti_output, y_numeric\u001b[39m=\u001b[39;49my_numeric, estimator\u001b[39m=\u001b[39;49mestimator)\n\u001b[1;32m   1124\u001b[0m check_consistent_length(X, y)\n\u001b[1;32m   1126\u001b[0m \u001b[39mreturn\u001b[39;00m X, y\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/utils/validation.py:1147\u001b[0m, in \u001b[0;36m_check_y\u001b[0;34m(y, multi_output, y_numeric, estimator)\u001b[0m\n\u001b[1;32m   1145\u001b[0m     _ensure_no_complex_data(y)\n\u001b[1;32m   1146\u001b[0m \u001b[39mif\u001b[39;00m y_numeric \u001b[39mand\u001b[39;00m y\u001b[39m.\u001b[39mdtype\u001b[39m.\u001b[39mkind \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mO\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m-> 1147\u001b[0m     y \u001b[39m=\u001b[39m y\u001b[39m.\u001b[39;49mastype(np\u001b[39m.\u001b[39;49mfloat64)\n\u001b[1;32m   1149\u001b[0m \u001b[39mreturn\u001b[39;00m y\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'A'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # Question 1\n",
@@ -580,32 +592,8 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "-all",
-   "encoding": "# coding: utf-8",
-   "executable": "/usr/bin/env python",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "8a94588eda9d64d9e9a351ab8144e55b1fabf5113b54e67dd26a8c27df0381b3"
-   }
   }
  },
  "nbformat": 4,
