--- a/Homework 4/Code/assignment4.ipynb
+++ b/Homework 4/Code/assignment4.ipynb
@@ -459,7 +459,7 @@
     "\tProvide the path for data.\n",
     "\tImplement- read_classification_data()\n",
     "'''\n",
-    "classification_data_2d_path = \"./data/2d_classification_data_entropy.csv\"\n",
+    "classification_data_2d_path = \"./2d_classification_data_entropy.csv\"\n",
     "x, y = read_classification_data(classification_data_2d_path)\n",
     "\n",
     "'''\n",
@@ -512,8 +512,8 @@
     "Implement- read_sat_image_data()\n",
     "'''\n",
     "\n",
-    "sat_image_Training_path = \"./data/satimageTraining.csv\"\n",
-    "sat_image_Test_path = \"./data/satimageTest.csv\"\n",
+    "sat_image_Training_path = \"./satimageTraining.csv\"\n",
+    "sat_image_Test_path = \"./satimageTest.csv\"\n",
     "\n",
     "train_df = read_sat_image_data(sat_image_Training_path)  # Training set\n",
     "test_df = read_sat_image_data(sat_image_Test_path)  # Testing set\n",
