--- a/Homework 4/Code/assignment4.ipynb
+++ b/Homework 4/Code/assignment4.ipynb
@@ -65,8 +65,10 @@
     "\t\tOrder (np.array from first row), (np.array from second row)\n",
     "\t'''\n",
     "\tdf: pd.DataFrame = pd.read_csv(file_path, header=None)\n",
-    "\tX: np.ndarray = df.iloc[:, 0].to_numpy().reshape(-1, 1)[:2, :]\n",
-    "\ty: np.ndarray = df.iloc[:, 1].to_numpy().reshape(-1, 1)[:2, :]\n",
+    "\tX: np.ndarray = np.array(df[0]).reshape((2, 1))\n",
+    "\ty: np.ndarray = np.array(df[1]).reshape((2, 1))\n",
+    "\tassert(df.size % 2 == 0)\n",
+    "\tassert(X.shape == (2, 1))\n",
     "\treturn X, y\n"
    ]
   },
@@ -99,18 +101,18 @@
    "source": [
     "@typechecked\n",
     "def cost_function(w: float, b: float, X: np.array, y: np.array) -> float:\n",
-    "    '''\n",
+    "\t'''\n",
     "\t\tInputs definitions:\n",
     "\t\t\tw : weight\n",
     "\t\t\tb : bias\n",
     "\t\t\tX : input  with shape (number_of_rows_in_dataframe, 1)\n",
     "\t\t\ty : target with shape (number_of_rows_in_dataframe, 1)\n",
-    "\t\tReturn the loss as a float data type. \n",
-    "    '''\n",
-    "    n = len(y)\n",
-    "    y_pred = sigmoid(np.dot(X, w) + b)\n",
-    "    loss = -np.sum(y * np.log(y_pred) + (1 - y) * np.log(1 - y_pred)) / n\n",
-    "    return loss\n"
+    "\tReturn the loss as a float data type. \n",
+    "\t'''\n",
+    "\tn = len(y)\n",
+    "\ty_pred = sigmoid(np.dot(X, w) + b)\n",
+    "\tloss = -np.sum(y * np.log(y_pred) + (1 - y) * np.log(1 - y_pred)) / n\n",
+    "\treturn loss\n"
    ]
   },
   {
